--- a/scss_2/_table.scss
+++ b/scss_2/_table.scss
@@ -19,13 +19,6 @@
 			border-bottom-color: #f0f0f0;
 		}
 
-		&:nth-of-type(3) {
-			
-			td {
-				border-top: solid 1px #356bf7;
-			}
-		}
-
 		&:nth-of-type(odd) {
 			background: #f5f5f5;
 		}
@@ -38,6 +31,14 @@
 			td {
 				border-top: solid 1px #356bf7;
 				color: #356bf7;
+
+				&.allScore {
+					color: #ffab00;
+				}
+
+				.pitcher {
+					color: #ffab00;
+				}
 
 				a {
 
@@ -57,6 +58,7 @@
 			position: sticky;
 			top: 70px;
 			z-index: 2;
+			border-bottom: solid 1px #356bf7;
 
 			//字靠左
 			&.tLeft {
@@ -102,7 +104,7 @@
 			}
 
 			&.allScore {
-				color: #71e31d;
+				color: #356bf7;
 			}
 
 			//遊戲種類著名顏色
@@ -889,13 +891,26 @@
 		
 		tr {
 
+			&:hover,&:active,&.active {
+
+				td {
+
+					p {
+
+						&.first {
+							color: #ffab00;
+						}
+					}
+				}
+			}
+
 			td {
 
 				p {
 					padding-bottom: 8px;
 
 					&.first {
-						color: #71e31d;
+						color: #356bf7;
 					}
 
 					&:last-child {
@@ -2346,25 +2361,23 @@
     border-collapse: collapse;
 	border-radius: 3px;
 	margin: 187px 0px 20px 10px;
-	background: #2c2c2c;
+	background: #f5f5f5;
 
 	tr {
 
 		th {
 			width: 100%;
 			padding: 5px 8px;
-			color: #eaeaea;
-			border-bottom: solid 1px #727272;
+			color: #454545;
 			font-size: 14px;
 			text-align: left;
-			background: #2c2c2c;
+			background: #ffffff;
 		}
 
 		td {
 			display: flex;
 			justify-content: space-around;
-			padding: 8px 5px 0px;
-			border-bottom: solid 1px #7b7b7b;
+			padding: 8px 5px 0px; 
 			flex-wrap: wrap;
 
 			&.two {
@@ -2404,33 +2417,32 @@
 				border: none;
 				height: auto;
 				padding: 8px;
-				background: #212121;
+				background: #ffffff;
 				font-size: 14px;
-				color: #fefefe;
+				color: #356bf7;
 				margin-bottom: 8px;
-				border: solid 1px #6a8e2a;
+				box-shadow: 1px 2px 5px 0px #00000049;
 
 				&:hover,&:active,&.active {
-					border-color: #aef156;
-					background: linear-gradient(to right,#92e820 0%,#46dd16 100%);
-					color: #202020;
+					background: #356bf7;
+					color: #ffffff;
 
 					span {
-						color: #202020;
+						color: #ffffff;
 					}
 				}
 
 				&.title {
-					border: none;
 					background: transparent;
 					pointer-events: none;
-					color: #fff;
+					color: #454545;
+					box-shadow: none;
 				}
 
 				.name {
 					font-size: 13px;
 					padding-right: 20px;
-					color: #fff;
+					color: #595959;
 				}
 			}
 		}
