--- a/scss/_myself.scss
+++ b/scss/_myself.scss
@@ -267,7 +267,7 @@
 
         //視窗右下灰色字
         .remind {
-            color: #505050;
+            color: #d4d4d4;
             font-size: 14px;
             margin: 0px 20px 20px 0px;
             float: right;
@@ -279,7 +279,7 @@
                 width: 15px;
                 height: 15px;
                 position: absolute;
-                background: url('../images/infor.png') no-repeat;
+                background: url('../images/infor2.png') no-repeat;
                 top: -2px;
                 left: -18px;
             }
