--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -3687,7 +3687,7 @@
 						width: 15px;
 						height: 15px;
 						position: absolute;
-						background: url(../images/infor.png) no-repeat;
+						background: url(../images/infor2.png) no-repeat;
 						top: -1px;
 						left: -18px;
 					}
