--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -72,7 +72,7 @@ header {
                 height: 15px;
                 border-radius: 30px;
                 margin: 5px 5px 0px 0px;
-                border: solid 1px #46d616;
+                border: solid 2px #31a20b;
                 background: #131313;
 
                 &:nth-of-type(2) {
