--- a/scss/_myself.scss
+++ b/scss/_myself.scss
@@ -1440,11 +1440,13 @@
     display: none;
     position: absolute;
     width: 800px;
-    height: 360px;
+    height: auto;
     left: 50%;
     transform: translateX(-50%);
     top: 110px;
     z-index: 20;
+    box-shadow: 0px 0px 10px 5px #3f8a1385;
+    border: solid 1px #3e8a13;
 
     //顯示
     &.display {
@@ -1455,15 +1457,15 @@
     .topbar {
         width: 100%;
         height: 40px;
-        background: #ababab;
+        background: #242424;
         border-radius: 3px 3px 0px 0px;
         position: relative;
         text-align: center;
-        border: solid 1px #a2a2a2;
+        border-bottom: solid 1px #3aad1b;
 
         span {
             font-size: 14px;
-            color: #3d3d3d;
+            color: #4be119;
             line-height: 42px;
             font-weight: bold;
         }
@@ -1474,11 +1476,11 @@
             width: 40px;
             height: 40px;
             border-radius: 40px;
-            background: #cacaca;
-            border: solid 3px #5e5e5e;
+            background: #404040;
+            border: solid 3px #4be119;
             right: -50px;
             top: -50px;
-            box-shadow: 0px 0px 0px 5px #cacaca;
+            box-shadow: 0px 0px 0px 5px #404040;
             &::before {
                 content: "";
                 position: absolute;
@@ -1486,7 +1488,7 @@
                 height: 18px;
                 right: 16px;
                 top: 8px;
-                background: #5e5e5e;
+                background: #4be119;
                 transform: rotate(45deg);
             }
             &::after {
@@ -1496,7 +1498,7 @@
                 height: 18px;
                 left: 16px;
                 top: 8px;
-                background: #5e5e5e;
+                background: #4be119;
                 transform: rotate(-45deg);
             }
         }
@@ -1506,11 +1508,9 @@
     .box {
         width: 100%;
         height: 315px;
-        background: #747474;
+        background: #242424;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
-        border: solid 1px #a2a2a2;
-        border-top: none;
 
         .inputBox {
             width: 50%;
@@ -1524,18 +1524,19 @@
             }
 
             input,select {
-                background: #505050;
-                color: #ababab;
+                background: linear-gradient(to top, #333333 0%, #272727 100%);
+                color: #d2d2d2;
                 width: 245px;
                 height: 36px;
                 box-sizing: border-box;
                 padding: 3px 0px 3px 10px;
                 float: right;
                 outline: none;
-                border: none;
+                border: solid 1px #858585;
                 border-radius: 3px;
                 font-size: 15px;
                 margin: 7px 0px 0px 0px;
+                box-shadow: 0px 2px 5px 0px #1c1c1c;
 
                 &.short {
                     width: 105px;
@@ -1549,7 +1550,7 @@
 
             span {
                 line-height: 50px;
-                color: #3d3d3d;
+                color: #cacaca;
                 padding-left: 30px;
                 font-weight: bold;
             }
@@ -1558,18 +1559,20 @@
         button {
             width: 220px;
             height: 36px;
-            background: linear-gradient(to bottom, #8f9cdc 0%, #3247b8 100%);
-            border: 1px solid #4556b1;
-            color: #fff;
+            background: #51ae19;
+            border: solid 1px #aef156;
+            color: #191919;
             border-radius: 5px;
             font-size: 16px;
             font-weight: bold;
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
-            bottom: 0%;
+            bottom: 7%;
             &:hover,&:active,&.active {
-                background: linear-gradient(to bottom, #3247b8 0%, #8e9bdc 100%);
+                background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
+                color: #46d317;
+                border-color: #2b7d16;
             }
         }
     }
