--- a/scss_3/_header.scss
+++ b/scss_3/_header.scss
@@ -3,10 +3,9 @@ header {
     width: 100%;
     min-width: 1480px;
     height: 110px;
-    background: #356bf7;
+    background: #505050;
     position: relative;
     z-index: 10;
-    overflow: hidden;
 
     &.mine {
         min-width: 1200px;
@@ -16,14 +15,14 @@ header {
     .top {
         width: 100%;
         height: 25px;
-        background: #efefef;
+        background: #2a2a2a;
 
         //盤口對照表+設定
-        .conversionBtn,.controlBtn {
+        button {
             float: left;
             width: auto;
             height: 100%;
-            color: #595959 ;
+            color: #b4bac8;
             background: transparent;
             margin-left: 15px;
             font-size: 13px;
@@ -41,13 +40,13 @@ header {
                 position: absolute;
                 left: -23px;
                 top: 4px;
-                color: #356bf7;
+                color: #fff;
             }
 
             marquee {
                 line-height: 25px;
                 font-size: 12px;
-                color: #356bf7;
+                color: #b4bac8;
                 overflow: visible;
             }
         }
@@ -56,7 +55,7 @@ header {
         span {
             float: right;
             font-size: 12px;
-            color: #595959;
+            color: #b4bac8;
             line-height: 25px;
             margin-right: 15px;
         }
@@ -103,7 +102,7 @@ header {
             font-weight: bolder;
             text-align: center;
             line-height: 85px;
-            color: #ffffff
+            color: #fff
         }
 
         //上列表
@@ -121,13 +120,12 @@ header {
                     padding: 0px 10px;
                     height: 76px;
                     line-height: 85px;
-                    color: #ffffff;
+                    color: #fff;
                     border-bottom: solid 5px transparent;
                     font-size: 14px;
 
                     &:hover,&:active,&.active {
-                        border-color: #ffffff;
-                        color: #ffffff;
+                        border-color: #59a936;
                     }
 
                     .fa-user {
@@ -162,12 +160,10 @@ header {
                     font-size: 14px;
                     padding-left: 5px;
                     border-radius: 3px;
-                    border: solid 1px #356bf7;
-                    background: #ffffff;
-                    color: #000000;
+                    border: none;
 
                     &::placeholder {
-                        color: #8d8d8d;
+                        color: #8f8f8f;
                     }
                 }
 
@@ -176,7 +172,7 @@ header {
                     left: 0px;
                     bottom: -28px;
                     font-size: 14px;
-                    color: #ffffff;
+                    color: #ababab;
                 }
 
                 .remember {
@@ -184,50 +180,42 @@ header {
                     left: 18px;
                     bottom: -28px;
                     font-size: 14px;
-                    color: #ffffff;
+                    color: #ababab;
 
                     .cube {
                         left: -18px;
                         top: -1px;
-                        background: transparent;
-                        border-color: #e3e3e3;
-
-                        &.active {
-
-                            &::before {
-                                background: url('../images/cubeArrow2_2.png') no-repeat;
-                            }
-                        }
                     }
                 }
             }
 
             .loginBtn {
-                background: #ffffff;
+                background: #2a2a2a;
+                border: solid 1px #fff;
                 padding: 5px 14px;
                 border-radius: 3px;
-                color: #454545;
+                color: #fff;
                 font-size: 14px;
                 font-weight: bold;
                 margin-right: 8px;
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
-                    color: #ffffff;
+                    background: #fff;
+                    color: #2a2a2a;
                 }
             }
 
             .signupBtn {
-                background: #ffffff;
+                background: #59a936;
                 border-radius: 3px;
-                color: #454545;
-                padding: 5px 14px;
+                color: #fff;
+                padding: 6px 14px;
                 font-size: 14px;
                 font-weight: bold;
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
-                    color: #ffffff;
+                    background: #fff;
+                    color: #59a936;
                 }
             }
 
@@ -240,7 +228,7 @@ header {
                 .fa-globe {
                     float: left;
                     margin: 3px 6px 0px 0px;
-                    color: #ffffff;
+                    color: #fff;
                 }
 
                 //下箭頭
@@ -252,22 +240,26 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: #ffffff transparent;
+                    border-color: #fff transparent;
                     top: 7px;
-                    right: 10px;
+                    right:10px;
                 }
 
                 select {
                     width: 110px;
                     padding: 3px 0px 3px 5px;
-                    background: #356bf7;
-                    border: solid 1px #ffffff;
+                    background: transparent;
+                    border: solid 1px #fff;
                     border-radius: 3px;
-                    color: #ffffff;
-                    font-size: 12px;
+                    color: #fff;
+                    font-size: 13px;
                     appearance:none;   
                     -moz-appearance:none;   
                     -webkit-appearance:none;
+
+                    option {
+                        color: #000;
+                    }
                 }
             }
         }
@@ -288,24 +280,19 @@ header {
             //字體
             p {
                 display: inline-block;
-                color: #ffffff;
+                color: #fff;
                 font-size: 13px;
                 margin: 10px 5px 0px 0px;
 
                 //信用額度
                 &.quota {
                     padding: 7px 7px 5px;
+                    border: solid 1px #fff;
                     border-radius: 3px;
-                    background: #ffffff;
-                    color: #595959;
-                    
-                    span {
-                        color: #356bf7;
-                    }
                 }
 
                 span {
-                    color: #ffffff;
+                    color: #59a936;
                     padding-left: 8px;
                 }
             }
@@ -314,13 +301,14 @@ header {
             button {
                 border-radius: 3px;
                 padding: 4px 15px;
-                background: #ffffff;
-                color: #454545;
+                background: #3d3d3d;
+                color: #fff;
                 font-size: 14px;
+                border: solid 1px #fff;
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
-                    color: #ffffff;
+                    background: #fff;
+                    color: #3d3d3d;
                 }
             }
 
@@ -333,7 +321,7 @@ header {
                 .fa-globe {
                     float: left;
                     margin: 3px 6px 0px 0px;
-                    color: #ffffff;
+                    color: #fff;
                 }
 
                 //下箭頭
@@ -345,7 +333,7 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: #ffffff transparent;
+                    border-color: #fff transparent;
                     top: 7px;
                     right:10px;
                 }
@@ -354,14 +342,17 @@ header {
                     width: 110px;
                     padding: 3px 0px 3px 5px;
                     background: transparent;
-                    background: #356bf7;
-                    border: solid 1px #ffffff;
+                    border: solid 1px #fff;
                     border-radius: 3px;
-                    color: #ffffff;
-                    font-size: 12px;
+                    color: #fff;
+                    font-size: 13px;
                     appearance:none;   
                     -moz-appearance:none;   
                     -webkit-appearance:none;
+
+                    option {
+                        color: #000;
+                    }
                 }
             }
         }
