--- a/scss_3/_leftside.scss
+++ b/scss_3/_leftside.scss
@@ -1,15 +1,13 @@
 .left {
     width: 270px;
     height: 850px;
+    background: #bcbcbc;
     float: left;
     overflow-x: hidden;
     overflow-y: auto;
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
-    border-width: 1px 0px;
-    background: #ffffff;
-    box-shadow: 0px 0px 5px 0px #00000049;
 
     &::-webkit-scrollbar {
         width: 5px;
@@ -17,18 +15,17 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: #ffffff;
+        background: #f1f1f1;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: linear-gradient(to bottom,#ffab00 0%, #ff4802 100%);
+        background: #b9becf;
         border-radius: 10px;
     }
     
     //我的頁面
     &.mine {
-        border: none;
 
         //上視窗
         .minewindow {
@@ -52,10 +49,9 @@
 
                 //字樣
                 p {
-                    color: #454545;
 
                     &.joinday {
-                        color: #454545;
+                        color: #304880;
                         font-size: 15px;
                         padding-top: 5px;
                     }
@@ -64,10 +60,10 @@
                         display: inline-block;
                         width: 36px;
                         height: 17px;
-                        background: #356bf7;
+                        background: linear-gradient(to right, #8e9bdc 0%, #2e44b6 100%);
                         position: relative;
                         text-align: right;
-                        color: #ffffff;
+                        color: #fff;
                         font-weight: bold;
                         border-radius: 5px;
                         margin: -3px 0px 0px 5px;
@@ -87,7 +83,6 @@
                     }
                 }
             }
-
             //三按鈕
             .threebut {
                 width: 100%;
@@ -98,20 +93,19 @@
                     display: inline-block;
                     width: 60px;
                     height: 58px;
-                    margin: 0px 3px;
-                    border-radius: 8px;
+                    margin: 0px 4px;
+                    border-radius: 3px;
                     font-size: 16px;
                     text-align: center;
                     background: transparent;
-                    color: #454545;
+                    color: #4556b1;
                     padding-top: 10px;
 
                     &:hover,&:active,&.active {
-                        background: #356bf7;
-                        color: #ffffff;
-
-                        i {
-                            color: #ffffff;
+                        background: #4556b1;
+                        color: #fff;
+                        span {
+                            background-position-y: -30px;
                         }
                     }
 
@@ -120,31 +114,23 @@
                         display: block;
                         font-size: 24px;
                         margin-bottom: 10px;
-                        color: #8d8d8d;
                     }
                 }
             }
         }
         //下半選單
         ul {
-            
             li {
 
                 &:nth-of-type(1),&:nth-of-type(5),&:nth-of-type(9) {
-                    border-bottom: solid 1px #eeeeee;
-                }
-
-                &:hover,&:active,&.active {
+                    border-bottom: solid 1px  #f1f1f1;
 
                     a {
-                        border-color: #356bf7;
+                        border: none;
                     }
                 }
 
                 a {
-                    border: solid 1px transparent;
-                    width: 100%;
-                    box-sizing: border-box;
                     
                     .live {
                         display: inline-block;
@@ -155,8 +141,6 @@
                         position: initial;
                         margin-left: 10px;
                         transform: translateY(0px);
-                        background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
-                        color: #ffffff;
                     }
 
                     i {
@@ -187,17 +171,15 @@
             &:hover {
 
                 a {
-                    border-color: #356bf7;
-                    color: #356bf7;
-                    box-shadow: 0px 0px 5px 0px #00000049;
-                    z-index: 10;
+                    background: #747474;
+                    color: #fff;
 
-                    svg {
-                        fill: #356bf7;
+                    svg{
+                        fill: #fff;
                     }
 
-                    i {
-                        color: #356bf7;
+                    i,.total  {
+                        color: #fff;
                     }
                 }
             }
@@ -209,17 +191,15 @@
                 }
 
                 a {
-                    border-color: #356bf7;
-                    color: #356bf7;
-                    box-shadow: 0px 0px 5px 0px #00000049;
-                    z-index: 10;
+                    background: #747474;
+                    color: #fff;
 
                     svg {
-                        fill: #356bf7;
+                        fill: #fff;
                     }
 
-                    i {
-                        color: #356bf7;
+                    i,.total {
+                        color: #fff;
                     }
                 }
             }
@@ -233,16 +213,14 @@
 
             a {
                 display: block;
-                color: #454545 ;
-                width: 100%;
-                background: #ffffff;
+                color: #000;
+                width: calc(100% - 50px);
                 height: 45px;
                 line-height: 45px;
                 font-size: 14px;
                 padding-left: 50px;
                 position: relative;
-                box-sizing: border-box;
-                border: solid 1px transparent;
+                border-bottom: solid 1px #ababab;
 
                 //字前小圖
                 i {
@@ -250,7 +228,7 @@
                     top: 12px;
                     left: 18px;
                     font-size: 18px;
-                    color: #8d8d8d;
+                    color: #505050;
 
                     &::before {
                         margin: 0px auto;
@@ -277,7 +255,7 @@
                     position: absolute;
                     left: 18px;
                     top: 12px;
-                    fill: #8d8d8d;
+                    fill: #505050;
                 }
 
                 //字後小框
@@ -286,22 +264,22 @@
                     right: 10px;
                     top: 0px;
                     font-size: 13px;
-                    color: #454545;
+                    color: #505050;
                 }
 
                 //LIVE小框
                 .live {
                     display: none;
                     position: absolute;
-                    line-height: 18px;
+                    line-height: 19px;
                     height: auto;
                     width: auto;
                     top: 49%;
                     transform: translateY(-50%);
                     right: 42px;
-                    font-size: 12px;
-                    background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
-                    color: #ffffff;
+                    font-size: 13px;
+                    background: #505050;
+                    color: #ff8c00;
                     padding: 0px 4px;
                     border-radius: 3px;
                 }
@@ -311,17 +289,17 @@
                 display: none;
                 width: calc(100% - 30px);
                 height: 30px;
-                background: #f7f7f7;
-                border-bottom: solid 1px #e8e8e8;
-                line-height: 30px;
+                background: #505050;
+                border-bottom: solid 1px #ababab;
+                background: linear-gradient();
+                line-height: 31px;
                 padding-left: 30px;
-                font-size: 12px;
-                color: #454545;
+                font-size: 13px;
+                color: #fff;
                 cursor: pointer;
 
                 &:hover,&:active,&.active {
-                    background: #356bf7;
-                    color: #ffffff;
+                    background: #3d3d3d;
                 }
 
                 span {
