--- a/scss_3/_rightside.scss
+++ b/scss_3/_rightside.scss
@@ -8,76 +8,50 @@
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
-    background: #ffffff;
-    box-shadow: 0px 0px 5px 0px #00000049;
 
     &::-webkit-scrollbar {
-        width: 5px;
+        width: 8px;
         background-color: transparent;
     }
 
     &::-webkit-scrollbar-track {
-        background: #ffffff;
+        background: #f1f1f1;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: linear-gradient(to bottom,#ffab00 0%, #ff4802 100%);
+        background: #b9becf;
         border-radius: 10px;
     }
     
     //上段字樣
     .statusWindow {
         width: 100%;
-        height: 113px;
-        background: #f5f5f5;
-        position: relative;
+        height: auto;
+        background:  #f1f1f1;
         
         p {
-            background: #ffffff;
-            color: #454545;
-            padding: 7px 15px;
-            font-size: 12px;
+            background: #747474;
+            border-bottom: solid 1px #ababab;
+            color: #fff;
+            padding: 8px 15px 6px;
+            font-size: 13px;
         }
 
         ul {
-            position: absolute;
-            width: 95%;
-            height: auto;
-            left: 50%;
-            bottom: 4%;
-            transform: translateX(-50%);
 
             li {
-                padding: 5px 15px 3px;
+                padding: 7px 15px;
                 font-size: 14px;
-                position: relative;
-                background: #ffffff;
-                color: #454545;
-                margin-bottom: 3px;
-
-                &::before {
-                    content: "";
-                    position: absolute;
-                    width: 1px;
-                    height: calc(100% + 2px);
-                    left: -1px;
-                    top: -1px;
-                    background: #356bf7;
-                }
+                border-bottom: solid 1px #ababab;
 
                 span {
                     float: right;
-                    font-size: 12px;
+                    font-size: 13px;
                     padding-top: 2px;
-                    color: #356bf7;
 
                     &.onWait {
-                        color: #454545;
-                    }
-
-                    &.fail {
-                        color: #f42a2a;
+                        color: #3c7424;
                     }
                 }
 
@@ -86,7 +60,7 @@
                     width: 15px;
                     height: 15px;
                     background: transparent;
-                    border: solid 1px #8d8d8d;
+                    border: solid 1px #000;
                     border-radius: 15px;
                     margin-left: 15px;
                     position: relative;
@@ -97,7 +71,7 @@
                         position: absolute;
                         width: 1px;
                         height: 7px;
-                        background: #8d8d8d;
+                        background: #000;
                         transform: rotate(45deg);
                         top: 3px;
                         right: 6px;
@@ -108,7 +82,7 @@
                         position: absolute;
                         width: 1px;
                         height: 7px;
-                        background: #8d8d8d;
+                        background: #000;
                         transform: rotate(-45deg);
                         top: 3px;
                         left: 6px;
@@ -116,21 +90,22 @@
                 }
             }
         }
+        
     }
 
     //直播小框
     .liveWindow {
         width: 100%;
         height: auto;
-        background: #ffffff;
+        background: #ababab;
         text-align: center;
 
         .title {
-            background: #ffffff;
-            border-bottom: solid 1px #f6f6f6;
-            color: #454545;
-            padding: 7px 15px;
-            font-size: 12px;
+            background: #747474;
+            border-bottom: solid 1px #ababab;
+            color: #fff;
+            padding: 8px 15px 6px;
+            font-size: 13px;
             text-align: left;
         }
 
@@ -162,8 +137,8 @@
                 }
     
                 p {
-                    font-size: 12px;
-                    color: #454545;
+                    font-size: 13px;
+                    color: #000;
                     line-height: 20px;
                 }
             }
@@ -179,11 +154,10 @@
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%,-50%);
-                    color: #595959;
     
                     span {
-                        color: #356bf7;
-                        font-size: 12px;
+                        color: #fff;
+                        font-size: 14px;
                     }
                 }
             }
@@ -196,20 +170,17 @@
             background-size: cover;
         }
     }
-
     //下大框
     .room {
         width: 100%;
         height: auto;
-        margin-top: 5px;
-
         //切換按鈕
         .twobut {
             width: 100%;
             height: 27px;
+            background: #747474;
 
             .line {
-                display: none;
                 float: left;
                 width: 1%;
                 height: 100%;
@@ -219,41 +190,32 @@
             button {
                 width: 49.5%;
                 height: 100%;
-                background: #e6e6e6;
-                color: #595959;
+                background: transparent;
+                color: #fff;
                 font-size: 14px;
                 float: left;
-                margin-right: 1%;
-                border-radius: 3px 3px 0px 0px;
-                border: solid 1px transparent;
-
-                &:last-child {
-                    margin: 0px;
-                }
 
                 &:hover,&:active,&.active {
-                    background: #ffffff;
-                    border: solid 1px #356bf7;
-                    color: #356bf7;
+                    background: #bcbcbc;
+                    color: #000;
                 }
             }
         }
         .onebut {
             width: 100%;
             height: 27px;
+            background: #747474;
 
             button {
                 width: 100%;
                 height: 100%;
-                background: #e6e6e6;
-                color: #595959;
+                background: transparent;
+                color: #fff;
                 font-size: 14px;
-                border-radius: 3px 3px 0px 0px;
-                border: solid 1px transparent;
 
                 &:hover,&:active,&.active {
-                    background: #ffffff;
-                    color: #454545;
+                    background: #bcbcbc;
+                    color: #000;
                 }
             }
         }
@@ -267,19 +229,20 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
+            background: #ababab;
 
             &::-webkit-scrollbar {
                 width: 5px;
                 background-color: transparent;
             }
-        
+
             &::-webkit-scrollbar-track {
-                background: #ffffff;
+                background: #f1f1f1;
                 border-radius: 10px;
             }
-        
+
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+                background: #b9becf;
                 border-radius: 10px;
             }
 
@@ -293,50 +256,37 @@
                 li {
                     width: 100%;
                     height: 30px;
-                    line-height: 32px;
-                    box-sizing: border-box;
+                    line-height: 30px;
+                    border-bottom: solid 1px #f1f1f1;
                     position: relative;
                     overflow: hidden;
                     cursor: pointer;
-                    background: #ffffff;
 
                     &:hover,&:active {
+                        background: #f1f1f1;
 
                         &::before {
                             transform: rotate(90deg);
-                            border-color: transparent #356bf7; 
                         }
 
-                        .gameName {
-                            border-color: #356bf7;
-                            color: #356bf7;
-                        }
-
-                        .games {
-                            color: #356bf7;
+                        span {
+                            color: #000;
                         }
                     }
 
                     &.active {
-                        background: #f7f7f7;
                         height: auto;
+                        background: #f1f1f1;
                         position: sticky;
                         top: 0px;
                         z-index: 2;
 
                         &::before {
                             transform: rotate(90deg);
-                            border-color: transparent #356bf7;
                         }
 
-                        .gameName {
-                            border-color: #356bf7;
-                            color: #356bf7;
-                            background: #ffffff;
-                        }
-
-                        .games {
-                            color: #356bf7;
+                        span {
+                            color: #000;
                         }
                     }
 
@@ -347,45 +297,33 @@
                         height: 0px;
                         border-style: solid;
                         border-width: 7px 0px 7px 8px;
-                        border-color: transparent #8d8d8d;
+                        border-color: transparent #000;
                         right: 25px;
                         top: 8px;
                         transition: 0.3s all;
                     }
 
                     .gameName {
-                        display: block;
-                        width: 100%;
-                        height: 30px;
-                        color: #454545;
+                        color: #fff;
                         font-size: 13px;
-                        box-sizing: border-box;
-                        padding-left: 25px;
-                        border: solid 1px transparent;
+                        margin-left: 30px;
                     }
 
                     .games {
+                        float: right;
                         font-size: 13px;
                         font-weight: bold;
-                        color: #454545;
-                        position: absolute;
-                        right: 60px;
-                        top: 0px;
+                        color: #000;
+                        margin: 2px 60px 0px 0px;
                     }
 
                     .innerList {
-                        width: 96%;
+                        width: 100%;
                         height: 70px;
-                        background: #ffffff;
+                        background: #bcbcbc;
                         position: relative;
+                        border-top: solid 1px #f1f1f1;
                         cursor: default;
-                        border-radius: 5px;
-                        box-shadow: 0px 0px 5px 0px #00000049;
-                        margin: 0px auto 10px;
-
-                        &:nth-of-type(1) {
-                            margin-top: 10px;
-                        }
 
                         p {
                             width: 100%;
@@ -394,33 +332,31 @@
                             left: 10px;
                             top: 50%;
                             transform: translateY(-50%);
-                            font-size: 12px;
-                            color: #454545;
+                            font-size: 13px;
+                            color: #3d3d3d;
 
                             span {
                                 font-weight: bold;
-                                color: #356bf7;
+                                color: #000;
 
                                 .situation {
                                     font-weight: normal;
                                     float: right;
                                     margin-right: 20px;
-                                    color: #8d8d8d;
 
                                     &.onLive {
                                         position: relative;
-                                        color: #ffffff;
-                                        margin: -7px 15px 0px 0px;
+                                        color: #4556b1;
                                         
-                                        &::after {
+                                        &::before {
                                             content: "";
                                             position: absolute;
-                                            width: 40px;
-                                            height: 19px;
-                                            top: -1px;
-                                            left: -10px;
-                                            background: url('../images/liveBg.png') no-repeat;
-                                            z-index: -1;
+                                            width: 6px;
+                                            height: 6px;
+                                            border-radius: 12px;
+                                            top: 6px;
+                                            left: -12px;
+                                            background: #4556b1;
                                         }
                                     }
                                 }
@@ -432,14 +368,14 @@
                                 bottom: 0px;
                                 width: 70px;
                                 height: 30px;
-                                background: #ffffff;
+                                background: #ababab;
                                 border-radius: 3px;
-                                box-shadow: 1px 2px 10px 0px #00000049;
-                                color: #356bf7;
+                                border: solid 1px #fff;
+                                color: #fff;
 
                                 &:hover,&:active,&.active {
-                                    background: #356bf7;
-                                    color: #ffffff;
+                                    background: #fff;
+                                    color: #ababab;
                                 }
                             }
                         }
@@ -456,20 +392,20 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #f7f7f7;
+            background: #bcbcbc;
 
             &::-webkit-scrollbar {
-                width: 5px;
+                width: 4px;
                 background-color: transparent;
             }
-        
+
             &::-webkit-scrollbar-track {
-                background: #ffffff;
+                background: #f1f1f1;
                 border-radius: 10px;
             }
-        
+
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+                background: #b9becf;
                 border-radius: 10px;
             }
 
