--- a/scss_3/style.scss
+++ b/scss_3/style.scss
@@ -13,7 +13,7 @@
 html {
     width: 100%;
     height: 100%;
-    background: #ededed;
+    background: #2a2a2a;
 
     body {
         width: 100%;
@@ -22,17 +22,17 @@ html {
         overflow-x: auto;
 
         &::-webkit-scrollbar {
-            width: 5px;
+            height: 10px;
             background-color: transparent;
         }
     
         &::-webkit-scrollbar-track {
-            background: #ffffff;
+            background: #f1f1f1;
             border-radius: 10px;
         }
     
         &::-webkit-scrollbar-thumb {
-            background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+            background: #828282;
             border-radius: 10px;
         }
     }
