--- a/scss_2/_header.scss
+++ b/scss_2/_header.scss
@@ -83,6 +83,11 @@ header {
                 &:nth-of-type(3) {
                     background: #1856bd;
                     border-color: #90c1f2;
+                }
+
+                &:nth-of-type(4) {
+                    background: #ffffff;
+                    border-color: #d31c1c;
                     margin-right: 20px;
                 }
             }
