--- a/scss_4/_header.scss
+++ b/scss_4/_header.scss
@@ -3,7 +3,7 @@ header {
     width: 100%;
     min-width: 1480px;
     height: 110px;
-    background: #1f1f1f;
+    background: linear-gradient(to right,#d31c1c 0%,#bb092f 98%);
     position: relative;
     z-index: 10;
     overflow: hidden;
@@ -16,14 +16,14 @@ header {
     .top {
         width: 100%;
         height: 25px;
-        background: #131313;
+        background: #263f67;
 
         //盤口對照表+設定
         .conversionBtn,.controlBtn {
             float: left;
             width: auto;
             height: 100%;
-            color: #969696;
+            color: #ffffff;
             background: transparent;
             margin-left: 15px;
             font-size: 13px;
@@ -41,13 +41,13 @@ header {
                 position: absolute;
                 left: -23px;
                 top: 4px;
-                color: #31be16;
+                color: #ffffff;
             }
 
             marquee {
                 line-height: 25px;
                 font-size: 12px;
-                color: #37bd10;
+                color: #ffffff;
                 overflow: visible;
             }
         }
@@ -56,7 +56,7 @@ header {
         span {
             float: right;
             font-size: 12px;
-            color: #7a7a7a;
+            color: #ffffff;
             line-height: 25px;
             margin-right: 15px;
         }
@@ -108,7 +108,7 @@ header {
             font-weight: bolder;
             text-align: center;
             line-height: 85px;
-            color: #fff
+            color: #ffffff
         }
 
         //上列表
@@ -126,13 +126,13 @@ header {
                     padding: 0px 10px;
                     height: 76px;
                     line-height: 85px;
-                    color: #fff;
+                    color: #ffffff;
                     border-bottom: solid 5px transparent;
                     font-size: 14px;
 
                     &:hover,&:active,&.active {
-                        border-color: #33ba04;
-                        color: #7df81a;
+                        border-color: #ffffff;
+                        color: #ffffff;
                     }
 
                     .fa-user {
@@ -167,12 +167,14 @@ header {
                     font-size: 14px;
                     padding-left: 5px;
                     border-radius: 3px;
-                    border: solid 1px #39792d;
-                    background: #131313;
-                    color: #45b51f;
+                    border: solid 1px #d4364e;
+                    border-top: none;
+                    background: #ffffff;
+                    box-shadow: 0px -2px 8px 0px #00000049,0px -1px 0px 0px #ea9ab8 inset;
+                    color: #676767;
 
                     &::placeholder {
-                        color: #999999;
+                        color: #676767;
                     }
                 }
 
@@ -181,7 +183,7 @@ header {
                     left: 0px;
                     bottom: -28px;
                     font-size: 14px;
-                    color: #45b51f;
+                    color: #f6d627;
                 }
 
                 .remember {
@@ -189,45 +191,56 @@ header {
                     left: 18px;
                     bottom: -28px;
                     font-size: 14px;
-                    color: #ababab;
+                    color: #ffffff;
 
                     .cube {
                         left: -18px;
                         top: -1px;
+                        background: transparent;
+                        border-color: #e3e3e3;
+
+                        &.active {
+
+                            &::before {
+                                background: url('../images/cubeArrow2_2.png') no-repeat;
+                            }
+                        }
                     }
                 }
             }
 
             .loginBtn {
-                background: linear-gradient(to right,#45dc16 0%,#91e820 90%);
-                border: solid 1px #cdff7f;
+                background: linear-gradient(to top,#ffffff 0%,#dedede 28%,#ffffff 78%);
                 padding: 5px 14px;
                 border-radius: 3px;
-                color: #131313;
+                border: solid 1px transparent;
+                color: #454545;
                 font-size: 14px;
                 font-weight: bold;
                 margin-right: 8px;
+                box-shadow: 0px 2px 8px 0px #00000049;
 
                 &:hover,&:active,&.active {
-                    border-color: #ffffff;
-                    background: #fff;
-                    color: #393939;
+                    border-color: #bdd2f4;
+                    background: linear-gradient(to bottom,#32496d 0%, #507abe 100%);
+                    color: #ffffff;
                 }
             }
 
             .signupBtn {
-                background: linear-gradient(to top,#131313 0%,#323232 100%);
+                background: linear-gradient(to top,#ffffff 0%,#dedede 28%,#ffffff 78%); 
                 border-radius: 3px;
-                color: #fff;
-                padding: 6px 14px;
+                border: solid 1px transparent;
+                color: #454545;
+                padding: 5px 14px;
                 font-size: 14px;
                 font-weight: bold;
-                border: solid 1px #2c8e0b;
+                box-shadow: 0px 2px 8px 0px #00000049;
 
                 &:hover,&:active,&.active {
-                    border-color: #ffffff;
-                    background: #fff;
-                    color: #59a936;
+                    border-color: #bdd2f4;
+                    background: linear-gradient(to bottom,#32496d 0%, #507abe 100%);
+                    color: #ffffff;
                 }
             }
 
@@ -240,7 +253,7 @@ header {
                 .fa-globe {
                     float: left;
                     margin: 3px 6px 0px 0px;
-                    color: #ababab;
+                    color: #ffffff;
                 }
 
                 //下箭頭
@@ -252,7 +265,7 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: #ababab transparent;
+                    border-color: #ffffff transparent;
                     top: 7px;
                     right: 10px;
                 }
@@ -260,19 +273,14 @@ header {
                 select {
                     width: 110px;
                     padding: 3px 0px 3px 5px;
-                    background: transparent;
-                    border: solid 1px #707070;
+                    background: #bb092e;
+                    border: solid 1px #e8e8e8;
                     border-radius: 3px;
-                    color: #ababab;
+                    color: #ffffff;
                     font-size: 12px;
                     appearance:none;   
                     -moz-appearance:none;   
                     -webkit-appearance:none;
-                    background: #262626;
-
-                    option {
-                        color: #ababab;
-                    }
                 }
             }
         }
@@ -293,20 +301,25 @@ header {
             //字體
             p {
                 display: inline-block;
-                color: #ababab;
+                color: #ffffff;
                 font-size: 13px;
                 margin: 10px 5px 0px 0px;
 
                 //信用額度
                 &.quota {
                     padding: 7px 7px 5px;
-                    border: solid 1px #707070;
                     border-radius: 3px;
-                    background: #262626;
+                    background: #ffffff;
+                    color: #1b1b1b;
+                    border: solid 1px #e8e8e8;
+                    
+                    span {
+                        color: #1f54ab;
+                    }
                 }
 
                 span {
-                    color: #40c50f;
+                    color: #ffffff;
                     padding-left: 8px;
                 }
             }
@@ -315,15 +328,16 @@ header {
             button {
                 border-radius: 3px;
                 padding: 4px 15px;
-                background: linear-gradient(to top,#131313,#323232 100%);
-                color: #40c50f;
+                background: linear-gradient(to top,#ffffff 0%,#dedede 28%,#ffffff 78%);
+                color: #454545;
                 font-size: 14px;
-                border: solid 1px #2c8e0b;
+                box-shadow: 0px 2px 8px 0px #00000049;
+                border: solid 1px transparent;
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to bottom,#45dc16 10%,#91e820 90%);
-                    color: #1c1c1c;
-                    border-color: #cdff7f;
+                    background: linear-gradient(to bottom,#32496d 0%, #507abe 100%);
+                    color: #ffffff;
+                    border-color: #bdd2f4;
                 }
             }
 
@@ -336,7 +350,7 @@ header {
                 .fa-globe {
                     float: left;
                     margin: 3px 6px 0px 0px;
-                    color: #ababab;
+                    color: #ffffff;
                 }
 
                 //下箭頭
@@ -348,7 +362,7 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: #ababab transparent;
+                    border-color: #ffffff transparent;
                     top: 7px;
                     right:10px;
                 }
@@ -357,18 +371,14 @@ header {
                     width: 110px;
                     padding: 3px 0px 3px 5px;
                     background: transparent;
-                    border: solid 1px #ababab;
+                    background: #bb092e;
+                    border: solid 1px #e8e8e8;
                     border-radius: 3px;
-                    color: #ababab;
+                    color: #ffffff;
                     font-size: 12px;
-                    background: #262626;
                     appearance:none;   
-                    -moz-appearance:none;   
+                    -moz-appearance:none;
                     -webkit-appearance:none;
-
-                    option {
-                        color: #ababab;
-                    }
                 }
             }
         }
